--- a/blockchain/pom.xml
+++ b/blockchain/pom.xml
@@ -47,6 +47,13 @@
 			<artifactId>jackson-dataformat-csv</artifactId>
 			<version>2.9.5</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.apache.httpcomponents/httpclient -->
+		<dependency>
+			<groupId>org.apache.httpcomponents</groupId>
+			<artifactId>httpclient</artifactId>
+			<version>4.3.6</version>
+		</dependency>
+
 
 	</dependencies>
 </project>
