--- a/blockchain/pom.xml
+++ b/blockchain/pom.xml
@@ -54,6 +54,22 @@
 			<version>4.3.6</version>
 		</dependency>
 
-
+		<dependency>
+		  <groupId>org.web3j</groupId>
+		  <artifactId>core</artifactId>
+		  <version>3.4.0</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.bitcoinj</groupId>
+		    <artifactId>bitcoinj-core</artifactId>
+		    <version>0.14.7</version>
+		</dependency>
+		
+		<dependency>
+		    <groupId>org.json</groupId>
+		    <artifactId>json</artifactId>
+		    <version>20180130</version>
+		</dependency>
 	</dependencies>
 </project>
